fixed bug that made toolbar items pop out of container

--- a/src/components/ToolBar/ToolBar.css
+++ b/src/components/ToolBar/ToolBar.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 100%;
     height: 100%;
+    background-color: red;
 }
 
 
@@ -10,7 +11,7 @@
     position: relative;
     float: left;
     margin: 20px;
-    width: 150px;
+    width: 100px;
 }
 
 #brush-btn {
@@ -22,7 +23,6 @@
 
 .dropdown-content {
     z-index: 3;
-    position: absolute;
     width: 100px;
     height: 100px;
 }
@@ -33,9 +33,13 @@
     width: 100%;
     border: 1px solid lightgrey;
     background-color: white;
+
 }
 
-
+#brush-content {
+    position:absolute;
+    top: 30px;
+}
 
 .dropdown-content button:hover {
     background-color: grey;
@@ -47,12 +51,13 @@
     width: 100px;
     background-color:red;
     z-index: 3;
+
 }
 
 
 
 #brush-size-input {
-    width: 40px;
+    width: 30px;
     border: 1px solid lightgrey;
     position: relative;
     float: left;
@@ -64,5 +69,6 @@
     float: left;
     margin-right: 5px;
     margin-top: 10px;
+    font-size: 12px;
 }
 
